# back-end/controllers/location-controller.js
@@ -1,7 +1,6 @@
 'use strict';
 
 var LocationService = require('../services/location-service');
-var Location = require('../model/location');
 
 class LocationController {
     constructor(router) {
@@ -11,8 +10,8 @@ class LocationController {
 
     registerRoutes() {
         this.router.get('/', this.getLocations.bind(this));
-        //this.router.get('/:id', this.getSinglePlayer.bind(this));
-        //this.router.post('/', this.postPlayer.bind(this));
+        this.router.post('/', this.postLocation.bind(this));
+        this.router.get('/:name', this.getLocationsByName.bind(this));
        // this.router.put('/:id', this.putPlayer.bind(this));
     }
 
@@ -20,6 +19,29 @@ class LocationController {
         var locations = LocationService.getLocations();
         res.send(locations);
     }
+
+    postLocation(req, res) {
+        var locationInfo = req.body;
+        if (LocationService.addLocation(locationInfo)) {
+            res.setHeader('Location', '/location/' + locationInfo.id);
+            res.sendStatus(200);
+        } else {
+            res.sendStatus(500);
+        }
+    }
+
+    getLocationsByName(req, res) {
+        var name = req.params.name;
+        var locations = LocationService.getLocationsByName(name);
+        if (!locations) {
+            res.sendStatus(404);
+        } else {
+            res.send(locations);
+        }
+    }
+
+
+
 /*getSinglePlayer(req, res) {
         var id = req.params.id;
         var player = PlayersService.getSinglePlayer(id);
