# back-end/swagger.json
@@ -31,14 +31,69 @@
             },
             "post": {
                 "summary": "",
-                "description": "Post any location",
+                "description": "Save the location of member family",
                 "x-swagger-router-controller": "location",
-                "operationId": "postLocations",
+                "operationId": "postLocation",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [{
+                        "name": "name",
+                        "in": "formData",
+                        "description": "Member family name",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "latitude",
+                        "in": "formData",
+                        "description": "Latitude",
+                        "required": true,
+                        "type": "number"
+                    },
+                    {
+                        "name": "longitude",
+                        "in": "formData",
+                        "description": "Longitude",
+                        "required": true,
+                        "type": "number"
+                    }
+                ],
+                "responses": {                    
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                }
+            }
+        },
+
+        "/location/{name}": {
+            "get": {
+                "summary": "",
+                "description": "Returns on locations from the system that the user has access to",
+                "x-swagger-router-controller": "location",
+                "operationId": "getLocationsByName",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [{
+                    "name": "name",
+                    "in": "path",
+                    "description": "Name of member to fetch",
+                    "required": true,
+                    "type": "string"
+                }],
                 "responses": {
                     "200": {
-                        "description": "locations response",
+                        "description": "location response",
                         "schema": {
-                            "type": "array",
+                            "type": "object",
                             "items": {
                                 "$ref": "#/definitions/Location"
                             }
@@ -47,6 +102,7 @@
                 }
             }
         }
+
     },
     "definitions": {
         "Location": {
@@ -69,7 +125,7 @@
             "required": [
                 "id",
                 "name",
-                "date",
+                "datetime",
                 "latitude",
                 "longitude"
             ],
@@ -80,7 +136,7 @@
                 "name": {
                     "type": "string"
                 },
-                "date": {
+                "datetime": {
                     "type": "string"
                 },
                 "latitude": {
